	- Supported: tears, flattears, damage, flatdamage, shotspeed, speed, range, luck
	- Prepend "effect" to assign the stat change to the corresponding TemporaryEffect instead (ie: effecttears="0.7") (this is particularly relevant for active items)
	- The corresponding "cache" values are automatically added to the item, so you don't need to specify those as well.
Fixes:
* Fixed an issue with luamod autocomplete not displaying all the available options
* Fixed an issue where modded items' crafting quality was set to 0 if not explicitly defined in the XML.
* Fixed Isaac.SetIcon sometimes failing after being called too many times.
* Players can no longer get stuck with buggy heart containers when changed to soul/bone heart health types (they get converted by default).
* Fixed player:Revive reviving The Forgotten with a bugged half soul heart that cannot be removed.
* Fixed a possible error when a lua error occurs during a custom callback that uses a table as its callback ID.
* EntityPlayer:
	- SetBagOfCraftingSlot / SetBagOfCraftingContent now automatically recalculate the crafting output & shift bag contents if empty spaces are added in the middle.
	- Fixed SetFootprintColor crashing
* ItemConfig_Costume:
	- Fixed SkinColor attribute (now provides a valid int and can be modified)
* Level:
	- TryPlaceRoom & related functions no longer consider a room placement valid if the only neighbor would be a secret room and "AllowSpecialNeighbors" is false.
	- TryPlaceRoom(AtDoor) no longer automatically unlocks the door to the new room if placed adjacent to the player's current room.
* RoomTransition:
	- Fixed StartBossIntro crash on call if room index for room transition is invalid.
* ModCallbacks:
	- Fixed returning false on MC_PRE_PLAYER_ADD_CARD/PILL not preventing the card/pill being added as intended.
	- Fixed the float DamageAmount attribute in MC(_POST)_GRID_HURT_DAMAGE
	- Fixed MC_POST_ENTITY_TAKE_DMG sometimes providing 0 for players