@@ -1,1 +1,3 @@
 asm PreSampleLaserCollision "8b48??83f90975??c780????????00000000";
+
+asm DisableExitPrompt "8d45??c745??00009643"; //DisableExitPrompt option patch
