@@ -439,6 +439,9 @@ I(OPT_REPENTOGON_ECO_MODE_MARK, u8"This will stop the game from rendering and wi
 I(OPT_REPENTOGON_DEBUG_FIND_IN_RADIUS, u8"Extra debug render for FindInRadius")
 I(OPT_REPENTOGON_DEBUG_FIND_IN_RADIUS_MARK, u8"While the DebugFlag.HITSPHERES flag is enabled, debug spheres will be rendered for FindInRadius/QueryRadius calls.")
 
+I(OPT_REPENTOGON_DISABLE_EXIT_PROMPT, u8"Disable exit prompt")
+I(OPT_REPENTOGON_DISABLE_EXIT_PROMPT_MARK, u8"Disables the exit prompt when you try to quit the game, restroing original behavior.")
+
 I(OPT_EXTRA_HUD_MODES_OFF, u8"Off")
 I(OPT_EXTRA_HUD_MODES_NORMAL, u8"Normal")
 I(OPT_EXTRA_HUD_MODES_MINI, u8"Mini")
